--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,9 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
+	width: 80%;
+	margin: auto;
+	border: 2px solid var(--accent-color);
 }
 a:hover, a:focus{
 	font-style: italic;
@@ -27,31 +30,72 @@ h3 {
 header {
 	& h2 {
 		font-size: 175%;
-		text-indent: 30px;
+		padding-bottom: 0;
 	}
 	& h3 {
 		font-size: 130%;
 		font-style: italic;
-		text-indent: 30px;
+		padding-bottom: 1em;
 	}
 	& img {
 		float: left;
+		margin: .75em 1em .75em 1em;
+
 	}
+	border-bottom: 2px solid var(--accent-color);
+	background-image: linear-gradient(30deg, #f6bb73 0%, white 30%, white 65%, #f6bb73 100%);
 }
 
 /* the styles for the main content */
 main {
 	clear: left;
+	padding: 1em 1em 1em;
+	& h1 {
+		border-top: 2px solid var(--accent-color);
+		border-bottom: 2px solid var(--accent-color);
+	}
+
+	img{
+		border: 4px solid var(--accent-color);
+		border-radius: 10px;
+		border-style: double;
+	}
 }
 
 /* the styles for the footer */
 footer {
 	& p {
 		text-align: center;
+		color:white;
+		padding-top: 1em;
+		padding-bottom: 1em;
 	}
+
+	background-color: var(--accent-color);
 }
 
 /* CSS class */
 .large {
 	font-size: 125%;
+}
+
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+h1,h2,h3,p,ul{
+	margin-top: .5em;
+	margin-bottom: .5em;
+}
+
+ul{
+	margin-left: 2em;
+}
+
+blockquote{
+	font-style:italic;
+	padding-left: 1em;
+	padding-right: 1em;
 }
